from datetime import date, timezone

from django.db import models
from django.contrib.auth.models import User

# Create your models here.

#HOUSEHOLD
#HOUSEHOLD
#HOUSEHOLD
class Household(models.Model):
    house_number = models.CharField(max_length=20)
    street = models.CharField(max_length=100)

    head = models.ForeignKey(
        'Resident',
        on_delete=models.SET_NULL,
        null=True,
        blank=True,
        related_name='household_head'
    )

    def __str__(self):
        return f"{self.house_number} {self.street}"

#RESIDENTS
#RESIDENTS
#RESIDENTS
class Resident(models.Model):
     
    GENDER_CHOICES = [
        ('Male', 'Male'),
        ('Female', 'Female'),
    ]
    STATUS_CHOICES = [
        ("Alive", "Alive"),
        ("Deceased", "Deceased"),
        ("Moved", "Moved Out"),
    ]
    EDUCATIONAL_ATTAINMENT_CHOICES = [
        ("", "---------"),
        ("No Formal Education", "No Formal Education"),
        ("Elementary", "Elementary"),
        ("High School", "High School"),
        ("Vocational", "Vocational"),
        ("College", "College"),
        ("Postgraduate", "Postgraduate"),
    ]

    household = models.ForeignKey(
        Household, 
        on_delete=models.SET_NULL,
        null=True,
        blank=True,
        related_name='members'
    )

    first_name = models.CharField(max_length=100)
    middle_name = models.CharField(max_length=100, blank=True, null=True)
    last_name = models.CharField(max_length=100)
    suffix = models.CharField(max_length=20, blank=True, null=True)

    birth_date = models.DateField()
    place_of_birth = models.CharField(max_length=150, blank=True, null=True)
    gender = models.CharField(max_length=10, choices=GENDER_CHOICES)
    civil_status = models.CharField(max_length=20)
    nationality = models.CharField(max_length=100, blank=True, null=True)
    religion = models.CharField(max_length=100, blank=True, null=True)
    occupation = models.CharField(max_length=120, blank=True, null=True)
    educational_attainment = models.CharField(
        max_length=50,
        choices=EDUCATIONAL_ATTAINMENT_CHOICES,
        blank=True,
        default="",
    )
    pwd = models.BooleanField(default=False)
    indigenous = models.BooleanField(default=False)
    solo_parent = models.BooleanField(default=False)
    
    status = models.CharField(
        max_length=20,
        choices=STATUS_CHOICES,
        default="Alive"
    )

    contact_number = models.CharField(max_length=15, blank=True, null=True)
    email = models.EmailField(blank=True, null=True)
    precinct = models.CharField(max_length=50, blank=True, null=True)
    permanent_address = models.BooleanField(default=True)
    address_house_number = models.CharField(max_length=50, blank=True, null=True)
    address_street = models.CharField(max_length=150, blank=True, null=True)
    address_barangay = models.CharField(max_length=100, blank=True, null=True)
    address_city = models.CharField(max_length=100, blank=True, null=True)
    address_province = models.CharField(max_length=100, blank=True, null=True)

    voter_status = models.BooleanField(default=False)

    created_at = models.DateTimeField(auto_now_add=True)

    @property
    def age(self):
        if not self.birth_date:
            return None

        today = date.today()

        age = today.year - self.birth_date.year - (
            (today.month, today.day) <
            (self.birth_date.month, self.birth_date.day)
        )

        return age
    
    @property
    def age_group(self):

        age = self.age

        if age is None:
            return "Unknown"

        if age <= 12:
            return "Child"

        elif age <= 17:
            return "Youth"

        elif age <= 59:
            return "Adult"

        else:
            return "Senior Citizen"

    def __str__(self):
        return f"{self.last_name}, {self.first_name}"

    @property
    def has_structured_address(self):
        return any(
            [
                self.address_house_number,
                self.address_street,
                self.address_barangay,
                self.address_city,
                self.address_province,
            ]
        )

    @property
    def formatted_address(self):
        if self.has_structured_address:
            parts = [
                self.address_house_number,
                self.address_street,
                self.address_barangay,
                self.address_city,
                self.address_province,
            ]
            return ", ".join(part for part in parts if part)

        if self.household:
            parts = [self.household.house_number, self.household.street]
            return ", ".join(part for part in parts if part)

        return ""


class UserProfile(models.Model):
    user = models.OneToOneField(
        User,
        on_delete=models.CASCADE,
        related_name="profile",
    )
    resident = models.OneToOneField(
        Resident,
        on_delete=models.SET_NULL,
        null=True,
        blank=True,
        related_name="user_profile",
    )
    first_name = models.CharField(max_length=100)
    middle_name = models.CharField(max_length=100, blank=True, null=True)
    last_name = models.CharField(max_length=100)
    suffix = models.CharField(max_length=20, blank=True, null=True)
    birth_date = models.DateField()
    place_of_birth = models.CharField(max_length=150, blank=True, null=True)
    gender = models.CharField(max_length=10, choices=Resident.GENDER_CHOICES, blank=True)
    civil_status = models.CharField(max_length=20, blank=True)
    nationality = models.CharField(max_length=100, blank=True, null=True)
    religion = models.CharField(max_length=100, blank=True, null=True)
    occupation = models.CharField(max_length=120, blank=True, null=True)
    educational_attainment = models.CharField(
        max_length=50,
        choices=Resident.EDUCATIONAL_ATTAINMENT_CHOICES,
        blank=True,
        default="",
    )
    pwd = models.BooleanField(default=False)
    indigenous = models.BooleanField(default=False)
    solo_parent = models.BooleanField(default=False)
    voter_status = models.BooleanField(default=False)
    status = models.CharField(
        max_length=20,
        choices=Resident.STATUS_CHOICES,
        default="Alive",
    )
    contact_number = models.CharField(max_length=15, blank=True, null=True)
    precinct = models.CharField(max_length=50, blank=True, null=True)
    address = models.CharField(max_length=255, blank=True)
    valid_id_image = models.ImageField(upload_to="valid_ids/", blank=True, null=True)
    is_verified = models.BooleanField(default=False)
    is_auto_matched = models.BooleanField(default=False)
    created_at = models.DateTimeField(auto_now_add=True)
    updated_at = models.DateTimeField(auto_now=True)

    class Meta:
        ordering = ["-created_at"]

    def __str__(self):
        return f"{self.user.username} ({'Verified' if self.is_verified else 'Pending'})"

#SERVICE TYPE
#SERVICE TYPE
#SERVICE TYPE
class ServiceType(models.Model):

    name = models.CharField(max_length=100)
    fee = models.DecimalField(max_digits=8, decimal_places=2)
    voter_fee = models.DecimalField(max_digits=8, decimal_places=2, default=0)
    non_voter_fee = models.DecimalField(max_digits=8, decimal_places=2, default=0)

    def __str__(self):
        return self.name


class RequestPurpose(models.Model):
    name = models.CharField(max_length=100, unique=True)
    requires_details = models.BooleanField(default=False)
    is_active = models.BooleanField(default=True)
    sort_order = models.PositiveIntegerField(default=0)

    class Meta:
        ordering = ["sort_order", "name"]

    def __str__(self):
        return self.name
    
#SERVICE REQUEST
#SERVICE REQUEST
#SERVICE REQUEST
from datetime import date
from django.utils import timezone
class ServiceRequest(models.Model):
    BUSINESS_ORGANIZATION_TYPE_CHOICES = [
        ("sole_proprietorship", "Sole Proprietorship"),
        ("partnership", "Partnership"),
        ("corporation", "Corporation"),
        ("cooperative", "Cooperative"),
    ]

    BUSINESS_CORPORATION_NATIONALITY_CHOICES = [
        ("filipino", "Filipino"),
        ("foreign", "Foreign"),
    ]

    BUSINESS_PROPERTY_STATUS_CHOICES = [
        ("owned", "Owned"),
        ("leased", "Leased"),
    ]

    BUSINESS_ACTIVITY_TYPE_CHOICES = [
        ("main_office", "Main Office"),
        ("branch", "Branch"),
        ("admin_office_only", "Admin Office Only"),
    ]

    PURPOSE_CHOICES = [
        ("Barangay Clearance", "Barangay Clearance"),
        ("Local Employment", "Local Employment"),
        ("Bank Requirement", "Bank Requirement"),
        ("Postal ID", "Postal ID"),
        ("Police Clearance", "Police Clearance"),
        ("NBI Clearance", "NBI Clearance"),
        ("Senior Citizen ID", "Senior Citizen ID"),
        ("PSA", "PSA"),
        ("First Time Job Seeker", "First Time Job Seeker"),
        ("Other", "Other (state)"),
    ]

    STATUS_CHOICES = [
        ("Submitted", "Submitted"),
        ("Under Review", "Under Review"),
        ("For Validation", "For Validation"),
        ("Processing", "Processing"),
        ("Ready for Release", "Ready for Release"),
        ("Released", "Released"),
        ("Pending Requirements", "Pending Requirements"),
        ("On Hold", "On Hold"),
        ("Rejected", "Rejected"),
        ("Cancelled", "Cancelled"),
    ]

    resident = models.ForeignKey(
        Resident,
        on_delete=models.CASCADE,
        related_name='service_requests'
    )

    service_type = models.ForeignKey(
        ServiceType,
        on_delete=models.CASCADE,
        related_name="requests"
    )

    purpose_option = models.ForeignKey(
        RequestPurpose,
        on_delete=models.SET_NULL,
        null=True,
        blank=True,
        related_name="requests",
    )

    purpose = models.TextField(blank=True, null=True)
    purpose_for = models.CharField(max_length=100, choices=PURPOSE_CHOICES, blank=True, null=True)
    purpose_other = models.CharField(max_length=255, blank=True, null=True)

    business_name = models.CharField(max_length=255, blank=True, null=True)
    business_owner_name = models.CharField(max_length=255, blank=True, null=True)
    business_address = models.CharField(max_length=255, blank=True, null=True)
    business_nature = models.CharField(max_length=255, blank=True, null=True)
    business_organization_type = models.CharField(
        max_length=30,
        choices=BUSINESS_ORGANIZATION_TYPE_CHOICES,
        blank=True,
        null=True,
    )
    business_registration_number = models.CharField(max_length=100, blank=True, null=True)
    business_tin = models.CharField(max_length=100, blank=True, null=True)
    business_trade_name = models.CharField(max_length=255, blank=True, null=True)
    business_house_number = models.CharField(max_length=100, blank=True, null=True)
    business_street = models.CharField(max_length=255, blank=True, null=True)
    business_building_name = models.CharField(max_length=255, blank=True, null=True)
    business_block_number = models.CharField(max_length=100, blank=True, null=True)
    business_lot_number = models.CharField(max_length=100, blank=True, null=True)
    business_zip_code = models.CharField(max_length=20, blank=True, null=True)
    business_subdivision = models.CharField(max_length=255, blank=True, null=True)
    business_telephone = models.CharField(max_length=50, blank=True, null=True)
    business_email = models.EmailField(blank=True, null=True)
    business_president_name = models.CharField(max_length=255, blank=True, null=True)
    business_corporation_nationality = models.CharField(
        max_length=20,
        choices=BUSINESS_CORPORATION_NATIONALITY_CHOICES,
        blank=True,
        null=True,
    )
    business_psic_code = models.CharField(max_length=50, blank=True, null=True)
    business_area_sqm = models.DecimalField(max_digits=10, decimal_places=2, blank=True, null=True)
    business_operation_time = models.CharField(max_length=100, blank=True, null=True)
    business_employee_count = models.PositiveIntegerField(blank=True, null=True)
    business_qc_employee_count = models.PositiveIntegerField(blank=True, null=True)
    business_floor_area_sqm = models.DecimalField(max_digits=10, decimal_places=2, blank=True, null=True)
    business_male_employee_count = models.PositiveIntegerField(blank=True, null=True)
    business_female_employee_count = models.PositiveIntegerField(blank=True, null=True)
    business_delivery_vans = models.PositiveIntegerField(blank=True, null=True)
    business_delivery_motorcycles = models.PositiveIntegerField(blank=True, null=True)
    business_property_status = models.CharField(
        max_length=20,
        choices=BUSINESS_PROPERTY_STATUS_CHOICES,
        blank=True,
        null=True,
    )
    business_tax_declaration_number = models.CharField(max_length=100, blank=True, null=True)
    business_property_identification_number = models.CharField(max_length=100, blank=True, null=True)
    business_capital_investment = models.DecimalField(max_digits=12, decimal_places=2, blank=True, null=True)
    business_has_tax_incentives = models.BooleanField(default=False)
    business_activity_type = models.CharField(
        max_length=30,
        choices=BUSINESS_ACTIVITY_TYPE_CHOICES,
        blank=True,
        null=True,
    )
    business_products_services = models.CharField(max_length=255, blank=True, null=True)
    business_equipment = models.CharField(max_length=255, blank=True, null=True)
    business_equipment_units = models.PositiveIntegerField(blank=True, null=True)
    business_equipment_size = models.CharField(max_length=100, blank=True, null=True)
    business_representative_designation = models.CharField(max_length=255, blank=True, null=True)
    business_storeys = models.PositiveIntegerField(blank=True, null=True)
    business_occupants = models.PositiveIntegerField(blank=True, null=True)
    business_occupancy_type = models.CharField(max_length=255, blank=True, null=True)

    requestor_name = models.CharField(max_length=255, blank=True, null=True)
    requestor_address = models.CharField(max_length=255, blank=True, null=True)
    deceased_name = models.CharField(max_length=255, blank=True, null=True)
    deceased_relationship = models.CharField(max_length=150, blank=True, null=True)
    date_of_death = models.DateField(blank=True, null=True)

    emergency_contact_name = models.CharField(max_length=150, blank=True, null=True)
    emergency_contact_address = models.CharField(max_length=255, blank=True, null=True)
    emergency_contact_number = models.CharField(max_length=30, blank=True, null=True)

    residency_since = models.DateField(blank=True, null=True)

    fee = models.DecimalField(
        max_digits=6,
        decimal_places=2,
        default=0
    )

    status = models.CharField(
        max_length=20,
        choices=STATUS_CHOICES,
        default='Submitted'
    )

    document_number = models.CharField(
        max_length=50,
        unique=True,
        blank=True,
        null=True
    )

    request_date = models.DateTimeField(auto_now_add=True)

    processed_date = models.DateTimeField(blank=True, null=True)

    created_by = models.ForeignKey(
        User,
        on_delete=models.SET_NULL,
        null=True,
        blank=True,
        related_name="created_requests"
    )

    remarks = models.TextField(blank=True, null=True)
    requirements_note = models.TextField(blank=True, null=True)
    requirements_submission_instructions = models.TextField(blank=True, null=True)
    requirements_deadline = models.DateField(blank=True, null=True)
    requirements_requested_at = models.DateTimeField(blank=True, null=True)
    requirements_requested_by = models.ForeignKey(
        User,
        on_delete=models.SET_NULL,
        null=True,
        blank=True,
        related_name="requested_service_requirements",
    )
    resident_response_note = models.TextField(blank=True, null=True)
    resident_responded_at = models.DateTimeField(blank=True, null=True)

    clearance_number = models.CharField(max_length=20, blank=True, null=True)

    def __str__(self):
        return f"{self.service_type} - {self.resident}"

    @property
    def purpose_display(self):
        if self.purpose_option:
            if self.purpose_option.requires_details and self.purpose_other:
                return self.purpose_other
            return self.purpose_option.name
        if self.purpose_for == "Other" and self.purpose_other:
            return self.purpose_other
        if self.purpose_for:
            return self.purpose_for
        return self.purpose or "-"

    def save(self, *args, **kwargs):

        # SNAPSHOT FEE
        if not self.fee:
            if self.resident and self.resident.voter_status:
                self.fee = self.service_type.voter_fee
            else:
                self.fee = self.service_type.non_voter_fee

            # AUTO SET PROCESSED DATE WHEN RELEASED
        if self.status == "Released" and not self.processed_date:
            self.processed_date = timezone.now()

        # GENERATE DOCUMENT NUMBER
        if not self.document_number:

            year = date.today().year
            prefix = self.service_type.name[:3].upper()

            last_request = ServiceRequest.objects.filter(
                document_number__startswith=f"{prefix}-{year}"
            ).order_by("id").last()

            if last_request:
                last_number = int(last_request.document_number.split("-")[-1])
                new_number = last_number + 1
            else:
                new_number = 1

            self.document_number = f"{prefix}-{year}-{new_number:04d}"

        super().save(*args, **kwargs)


class ServiceRequestAttachment(models.Model):
    service_request = models.ForeignKey(
        ServiceRequest,
        on_delete=models.CASCADE,
        related_name="attachments"
    )
    uploaded_by = models.ForeignKey(
        User,
        on_delete=models.SET_NULL,
        null=True,
        blank=True,
        related_name="service_request_attachments"
    )
    file = models.FileField(upload_to="service_request_attachments/")
    original_name = models.CharField(max_length=255, blank=True)
    note = models.CharField(max_length=255, blank=True)
    created_at = models.DateTimeField(auto_now_add=True)

    class Meta:
        ordering = ["created_at", "id"]

    def __str__(self):
        return self.original_name or f"Attachment {self.pk}"

#PAYMENT
#PAYMENT
#PAYMENT
from datetime import date

class Payment(models.Model):

    service_request = models.OneToOneField(
        ServiceRequest,
        on_delete=models.CASCADE,
        related_name="payment"
    )

    receipt_number = models.CharField(  
        max_length=50,
        unique=True,
        blank=True
    )

    received_by = models.ForeignKey(
        User,
        on_delete=models.SET_NULL,
        null=True,
        blank=True,
        related_name="payments_received"

    )


    amount = models.DecimalField(max_digits=10, decimal_places=2)

    payment_date = models.DateTimeField(auto_now_add=True)

    collected_by = models.ForeignKey(
        User,
        on_delete=models.SET_NULL,
        null=True,
        blank=True,
        related_name="payments_collected"
    )

    def save(self, *args, **kwargs):

        if not self.receipt_number:

            year = date.today().year

            last_payment = Payment.objects.filter(
                receipt_number__startswith=f"RCPT-{year}"
            ).order_by("id").last()

            if last_payment:
                last_number = int(last_payment.receipt_number.split("-")[-1])
                new_number = last_number + 1
            else:
                new_number = 1

            self.receipt_number = f"RCPT-{year}-{new_number:04d}"

        super().save(*args, **kwargs)

    def __str__(self):
        return self.receipt_number


# COMPLAINT SYSTEM
# COMPLAINT SYSTEM
# COMPLAINT SYSTEM

class Complaint(models.Model):

    STATUS_CHOICES = [
        ("Submitted", "Submitted"),
        ("Under Review", "Under Review"),
        ("For Scheduling", "For Scheduling"),
        ("Scheduled for Hearing", "Scheduled for Hearing"),
        ("Ongoing Mediation", "Ongoing Mediation"),
        ("Resolved / Settled", "Resolved / Settled"),
        ("Unresolved", "Unresolved"),
        ("Referred", "Referred"),
        ("Withdrawn", "Withdrawn"),
    ]

    SCHEDULE_RESPONSE_CHOICES = [
        ("Pending Response", "Pending Response"),
        ("Acknowledged", "Acknowledged"),
        ("Needs Reschedule", "Needs Reschedule"),
        ("Cannot Attend", "Cannot Attend"),
    ]

    resident = models.ForeignKey(
        Resident,
        on_delete=models.CASCADE,
        related_name="complaints"
    )

    title = models.CharField(max_length=200)

    description = models.TextField()

    status = models.CharField(
        max_length=40,
        choices=STATUS_CHOICES,
        default="Submitted"
    )

    filed_by = models.ForeignKey(
    User,
    on_delete=models.SET_NULL,
    null=True,
    blank=True
)

    meeting_datetime = models.DateTimeField(null=True, blank=True)
    meeting_location = models.CharField(max_length=255, blank=True)
    meeting_purpose = models.CharField(max_length=255, blank=True)
    secretary_notes = models.TextField(blank=True)
    resident_schedule_response = models.CharField(
        max_length=30,
        choices=SCHEDULE_RESPONSE_CHOICES,
        default="Pending Response",
    )
    resident_schedule_responded_at = models.DateTimeField(null=True, blank=True)
    resident_schedule_response_note = models.TextField(blank=True)
    scheduled_by = models.ForeignKey(
        User,
        on_delete=models.SET_NULL,
        null=True,
        blank=True,
        related_name="scheduled_complaints",
    )

    date_filed = models.DateTimeField(auto_now_add=True)

    updated_at = models.DateTimeField(auto_now=True)

    def __str__(self):
        return f"{self.title} - {self.resident}"
    
#AUDIT LOGS
#AUDIT LOGS
#AUDIT LOGS
class AuditLog(models.Model):

    ACTION_CHOICES = [
        ("CREATE", "Create"),
        ("UPDATE", "Update"),
        ("DELETE", "Delete"),
        ("LOGIN", "Login"),
        ("LOGOUT", "Logout"),
        ("LOGIN_FAILED", "Login Failed"),
        ("EXPORT", "Export"),
        ("PRINT", "Print"),
        ("ROLE_CHANGE", "Role Change"),
        ("PERMISSION_CHANGE", "Permission Change"),
    ]

    user = models.ForeignKey(
        User,
        on_delete=models.SET_NULL,
        null=True
    )

    action = models.CharField(max_length=30, choices=ACTION_CHOICES)

    model_name = models.CharField(max_length=100)

    description = models.TextField()

    target_id = models.CharField(max_length=100, null=True, blank=True)

    before_data = models.JSONField(null=True, blank=True)

    after_data = models.JSONField(null=True, blank=True)

    ip_address = models.GenericIPAddressField(null=True, blank=True)

    user_agent = models.CharField(max_length=255, blank=True)

    request_path = models.CharField(max_length=255, blank=True)

    timestamp = models.DateTimeField(auto_now_add=True)

    class Meta:
        ordering = ["-timestamp"]
        indexes = [
            models.Index(fields=["timestamp"]),
            models.Index(fields=["action"]),
            models.Index(fields=["model_name"]),
        ]


class Notification(models.Model):
    CATEGORY_CHOICES = [
        ("service_request", "Service Request"),
        ("account", "Account"),
        ("complaint", "Complaint"),
        ("payment", "Payment"),
        ("general", "General"),
    ]

    user = models.ForeignKey(
        User,
        on_delete=models.CASCADE,
        related_name="notifications",
    )
    title = models.CharField(max_length=120)
    message = models.TextField()
    category = models.CharField(max_length=30, choices=CATEGORY_CHOICES, default="general")
    target_url = models.CharField(max_length=255, blank=True)
    is_read = models.BooleanField(default=False)
    created_at = models.DateTimeField(auto_now_add=True)

    class Meta:
        ordering = ["-created_at"]
        indexes = [
            models.Index(fields=["user", "is_read", "created_at"]),
        ]

    def __str__(self):
        return f"{self.user} - {self.title}"
